<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">星河助手</string>
    <string name="password_title">请按 OK 键输入应用口令</string>
    <string name="password_subtitle">支持数字和大写字母，小写会自动转大写</string>
    <string name="password_empty">请输入4位口令</string>
    <string name="password_key_backspace">退格</string>
    <string name="password_key_clear">清除</string>
    <string name="password_key_ok">OK</string>
    <string name="tab_password_install">口令安装</string>
    <string name="tab_app_uninstall">应用管理</string>
    <string name="home_settings">设置</string>
    <string name="download_task_button">下载任务</string>
    <string name="home_exit_confirm">再按一次返回退出</string>
    <string name="nav_install">口令安装</string>
    <string name="nav_remote">远程推送</string>
    <string name="nav_manager">应用管理</string>
    <string name="nav_system">系统详情</string>
    <string name="nav_cast">手机投屏</string>
    <string name="nav_php">PHP服务</string>
    <string name="title_install">口令安装</string>
    <string name="subtitle_install">输入4位分享口令，快速安装应用</string>
    <string name="hint_code">请输入4位口令</string>
    <string name="btn_ok">确定</string>
    <string name="btn_del">退格</string>
    <string name="title_remote">远程推送</string>
    <string name="subtitle_remote">通过电脑或手机推送应用到电视</string>
    <string name="method_computer">电脑推送</string>
    <string name="desc_computer">用电脑浏览器访问以下地址推送应用</string>
    <string name="method_phone">手机推送</string>
    <string name="desc_phone">用手机扫码推送应用到电视</string>
    <string name="title_manager">应用管理</string>
    <string name="subtitle_manager">管理已安装的应用</string>
    <string name="stat_apps">已安装应用</string>
    <string name="empty_apps">暂无已安装的应用</string>
    <string name="error_code">口令无效或文件已过期</string>
    <string name="error_network">网络错误，请检查连接</string>
    <string name="error_empty">请输入完整的4位口令</string>
    <string name="loading_verify">验证中...</string>
    <string name="title_download">正在下载</string>
    <string name="title_downloaded">下载完成</string>
    <string name="btn_install">安装应用</string>
    <string name="menu_open">打开应用</string>
    <string name="menu_uninstall">卸载应用</string>
    <string name="about_title">关于星河助手</string>
    <string name="about_version">版本 1.7.0</string>
    <string name="about_desc">让大屏应用安装更简单</string>
    <string name="server_url_default">http://zhushou.itv666.cc</string>
    <string name="app_list_loading">加载中...</string>
    <string name="app_list_empty">暂无应用</string>
    <string name="open_failed">打开失败</string>
    <string name="uninstall_failed">卸载失败</string>
    <string name="uninstall_open_settings">请在设置中卸载</string>
</resources>
